--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -12,6 +12,15 @@
   background-color: #26a69a;
   text-align: center;
   letter-spacing: 0.5px;
+  border: none;
+  border-radius: 2px;
+  height: 36px;
+  padding: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-weight: bold;
 }
 
 .select {
