Ajuste no select

--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -24,6 +24,10 @@
 }
 
 .select {
-  width: 150px;
-  font-family: 'Fira Code Retina', Consolas, monospace, Arial;
+  background-color: hsla(0, 0%, 100%, 0.9);
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #f2f2f2;
+  border-radius: 2px;
+  height: 3rem;
 }
